# hepkit

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
src/hepkit/: histograms.py  variables.py
src/hepkit/classification/: data_splitting.py  preprocessing.py  visualization.py
src/hepkit/histograms/: __init__.py  building.py  comparisons.py  plotting.py
tests/: test_data_splitting.py  test_histograms.py  test_preprocessing.py  test_variables.py  test_visualization.py
