[project]
name = "hepkit"
version = "0.1.0"
description = "HEP analysis basic toolkit"
readme = "README.md"
authors = [
    { name = "Raul Rabadan", email = "raul.iraq.rabadan.trejo@cern.ch" }
]
requires-python = ">=3.12"
dependencies = [
    "hist[plot]>=2.8.1",
    "matplotlib>=3.10.3",
    "mplhep>=0.3.59",
    "order>=2.1.7",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
line-length = 100
target-version = "py312"
lint.select = ["E", "F", "I", "N", "W", "UP", "B"]
lint.ignore = [
    "E501", # line too long, handled by ruff format
    "B006", # Do not use mutable data structures for arguments defaults
    "N803", # Argument name should be lowercase
    "N806", # Variable in function should be lowercase
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
exclude = ["build", "dist", "__pycache__", ".venv"]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.6.0",
    "ruff>=0.3.4",
    "mypy>=1.9.0",
    "pytest>=8.0.0",
]
